# dota2-pipeline

./: .env-example  .gitignore  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: dag_pipeline_dota2.py
databricks/silver/: silver_match_details.ipynb
migrations/: env.py
migrations/versions/: 714fd397c0f6_create_initial_matches_table.py  a4f0eea16b34_create_initial_matches_table.py
src/collect/: collect_pro_match.py  matches.py  matches_details.py  models.py  proxy.py
src/db/: mongo.py  session.py
src/process/: transform.py
src/shared/: exceptions.py  settings.py
src/storage/: s3s.py
